<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/txtTitleCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitleCadastro"/>

    <EditText
        android:id="@+id/editNome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:autofillHints="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"/>

    <EditText
        android:id="@+id/editEmail"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/editNome"/>

    <EditText
        android:id="@+id/editSenha"
        android:autofillHints="@string/email"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/editEmail"/>
    
    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:text="@string/bt_cadastrar"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"/>

</androidx.constraintlayout.widget.ConstraintLayout>