<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPerfil">

    <View
        android:id="@+id/containerUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/container_user"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:contentDescription="@string/nome"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="@id/containerUser"
        app:layout_constraintTop_toTopOf="@id/containerUser"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"/>
    
    <ImageView
        android:id="@+id/iconeUser"
        android:contentDescription="@string/nome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_user"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerUser"/>
    
    <TextView
        android:id="@+id/txtNomeUsusario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_nome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/containerUser" />

    <ImageView
        android:id="@+id/iconeEmail"
        android:contentDescription="@string/email"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconeUser"/>

    <TextView
        android:id="@+id/txtEmailUsusario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/iconeEmail"
        app:layout_constraintTop_toBottomOf="@id/txtNomeUsusario" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/bt_deslogar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtEmailUsusario"/>


</androidx.constraintlayout.widget.ConstraintLayout>