<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Arvore">

    <View
        android:id="@+id/containerUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/container_user"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:contentDescription="@string/nome"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="@id/containerUser"
        app:layout_constraintTop_toTopOf="@id/containerUser"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"/>
    
    <ImageView
        android:id="@+id/iconeUser"
        android:contentDescription="@string/nome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_user"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtNomeUsuario"
        app:layout_constraintBottom_toBottomOf="@id/txtNomeUsuario"/>
    
    <TextView
        android:id="@+id/txtNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        tools:text="Leticia Pinho"
        app:layout_constraintStart_toEndOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/containerUser" />

    <ImageView
        android:id="@+id/iconeEmail"
        android:contentDescription="@string/email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_email"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtEmailUsuario"
        app:layout_constraintBottom_toBottomOf="@id/txtEmailUsuario"/>

    <TextView
        android:id="@+id/txtEmailUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        tools:text="leticia@gmail.com"
        app:layout_constraintStart_toEndOf="@id/iconeEmail"
        app:layout_constraintTop_toBottomOf="@id/txtNomeUsuario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnArvore"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_edit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailUsuario"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdicionar"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnArvore"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListar"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_lista"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnAdicionar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeslogar"
        style="@style/Button_Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_deslogar"
        android:textColor="@color/green_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>