<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/txtTitleCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/perfil"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitleCadastro" />

    <TextView
        android:id="@+id/perfilNome"
        style="@style/Edit_Text"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <TextView
        android:id="@+id/perfilTitulo"
        style="@style/Edit_Text"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/perfilNome" />

    <TextView
        android:id="@+id/perfilGenero"
        style="@style/Edit_Text"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/perfilTitulo" />

    <TextView
        android:id="@+id/perfilDtNasc"
        style="@style/Edit_Text"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/perfilGenero" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/bt_alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddParent"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/bt_parentesco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEdit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/bt_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddParent" />

</androidx.constraintlayout.widget.ConstraintLayout>