<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".Editar">

    <View
        android:id="@+id/containerUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/container_user"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:contentDescription="@string/nome"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="@id/containerUser"
        app:layout_constraintTop_toTopOf="@id/containerUser"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="28dp"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/nome"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerUser">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNome"
            android:textColorHint="@color/white"
            android:background="@color/transparent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:autofillHints="@string/nome"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parentesco"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="28dp"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/parentesco"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editParentesco"
            android:textColorHint="@color/white"
            android:background="@color/transparent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:autofillHints="@string/nome"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editGenero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:hint="@string/genero"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentesco">

        <AutoCompleteTextView
            android:id="@+id/auto"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:textColor="@color/white"
            android:inputType="none"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ani"
        android:textSize="24sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editGenero"
        android:onClick="openDatePicker"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdicionar"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/bt_alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>